refactor: 에러 메시지 구체화 및 가독성 향상
* 열거형을 통화 코드 가독성 향상
* 에러 메시지에 원인과 해결책 제시